<resources>
    <string name="app_name">APlay store</string>
    <string name="contentTitle">Application instaled</string>
    <string name="contentText">It has completed installation</string>
    <string name="contentInfo">Instaled</string>
    <string name="tanksInstaled">It has completed installation \\n thanks for using Aplay store</string>
    <string name="AppUpdate">Updating</string>
    <string name="ApptInstaled">Instaled</string>
    <string name="AppNotInstaled">Not instaled</string>
    <string name="NoAplications">No application instaled</string>
    <string name="menu_agregarApp">add</string>
    <string name="activityAddDev_NameAplication">Application name</string>
    <string name="activityAddDev_etNameDev">Developer name</string>
    <string name="activityAddDev_etDetail">Detail of the application</string>
    <string name="activityAddDev_btnSave">save</string>
    <string name="serviveActionDownload">Downloading application</string>
    <string name="serviveActionUploading">Uplodaing application</string>
    <string name="activityDataRequiere">Data requiered</string>
    <string name="itemDetail_btnUninstall">Uninstall</string>
    <string name="itemDetail_btnOpen">Open</string>
    <string name="itemDetail_btnUpdate">Update</string>

    <string name="menu_editApp">Edit</string>
    <string name="itemDetail_btnSave">Save</string>
    <string name="menu_txtdetal">Detail</string>
    <string name="uninstall">Uninstall application</string>
    <string name="openAplication">Open aplication web</string>
    <string name="unInstaling">UnInstaling aplicaction ..</string>
    <string name="updateAplication">Update aplication ...</string>
    <string name="saveEditApp">Save changes of aplication</string>
</resources>
