<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/toolbar"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="valeriano.com.aplaystore.ItemDetailActivity">
    <LinearLayout
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/itemDetail_rowImagenView"
            android:layout_width="@dimen/rowlist_widthImagen"
            android:layout_height="@dimen/rowlist_heightImagen" />
        <TextView
            android:layout_weight="1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:textColor="@color/TitleAplication"
            android:id="@+id/itemDetail_txtTitleAplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/TitleDeveloper"
            android:id="@+id/itemDetail_txtDesarrollador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/TitleDeveloper"
            android:id="@+id/itemDetail_txtDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/TitleActualy"
            android:id="@+id/itemDetail_txtInstalada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <LinearLayout
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/itemDetail_LytBotones"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center"
            android:textSize="15dp"
            android:id="@+id/itemDetail_btnUninstall"
            android:text="@string/itemDetail_btnUninstall"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <Button
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15dp"
            android:id="@+id/itemDetail_btnOpen"
            android:text="@string/itemDetail_btnOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <Button
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15dp"
            android:id="@+id/itemDetail_btnUpdate"
            android:text="@string/itemDetail_btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/itemDetail_LytSave"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <Button
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15dp"
            android:id="@+id/itemDetail_btnSave"
            android:text="@string/itemDetail_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>